--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,14 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Snake Animation
-      - uses: Platane/snk@master
-        id: snake-gif
-        with:
-          github_user_name: Vin4s
-          svg_out_path: dist/github-contribution-grid-snake.svg
-
-- uses: Platane/snk@v3
-  with:
+     - uses: Platane/snk/svg-only@v2
+     with:
     # github user name to read the contribution graph from (**required**)
     # using action context var `github.repository_owner` or specified user
     github_user_name: ${{ github.repository_owner }}
